--- a/src/OpenTelemetry.Instrumentation.EventCounters/OpenTelemetry.Instrumentation.EventCounters.csproj
+++ b/src/OpenTelemetry.Instrumentation.EventCounters/OpenTelemetry.Instrumentation.EventCounters.csproj
@@ -1,15 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <Description>OpenTelemetry Metrics instrumentation for Dotnet EventCounters</Description>
-        <PackageTags>$(PackageTags);metrics;eventcounters</PackageTags>
-        <MinVerTagPrefix>Instrumentation.EventCounters-</MinVerTagPrefix>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="OpenTelemetry.Api" Version="$(OpenTelemetryCoreLatestVersion)" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Compile Include="$(RepoRoot)\src\Shared\Guard.cs" Link="Includes\Guard.cs" />
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>OpenTelemetry Metrics instrumentation for Dotnet EventCounters</Description>
+    <PackageTags>$(PackageTags);metrics;eventcounters</PackageTags>
+    <MinVerTagPrefix>Instrumentation.EventCounters-</MinVerTagPrefix>
+    <IncludeSharedGuardSource>true</IncludeSharedGuardSource>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="OpenTelemetry.Api" Version="$(OpenTelemetryCoreLatestVersion)" />
+  </ItemGroup>
 </Project>
