--- a/src/OpenTelemetry.Instrumentation.ServiceConnect/OpenTelemetry.Instrumentation.ServiceConnect.csproj
+++ b/src/OpenTelemetry.Instrumentation.ServiceConnect/OpenTelemetry.Instrumentation.ServiceConnect.csproj
@@ -8,6 +8,18 @@
     <IncludeSharedExceptionExtensionsSource>true</IncludeSharedExceptionExtensionsSource>
     <IncludeSharedDiagnosticSourceSubscriber>true</IncludeSharedDiagnosticSourceSubscriber>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove=".publicApi\net462\PublicAPI.Shipped.txt" />
+    <None Remove=".publicApi\net462\PublicAPI.Unshipped.txt" />
+    <None Remove=".publicApi\netstandard2.0\PublicAPI.Shipped.txt" />
+    <None Remove=".publicApi\netstandard2.0\PublicAPI.Unshipped.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include=".publicApi\net462\PublicAPI.Shipped.txt" />
+    <AdditionalFiles Include=".publicApi\net462\PublicAPI.Unshipped.txt" />
+    <AdditionalFiles Include=".publicApi\netstandard2.0\PublicAPI.Shipped.txt" />
+    <AdditionalFiles Include=".publicApi\netstandard2.0\PublicAPI.Unshipped.txt" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
