Resource detector -  ProcessRuntime

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -98,3 +98,8 @@ flags:
     carryforward: true
     paths:
       - src/OpenTelemetry.ResourceDetectors.Azure
+
+  unittests-ResourceDetectors.ProcessRuntime:
+    carryforward: true
+    paths:
+      - src/OpenTelemetry.ResourceDetectors.ProcessRuntime
