--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -18,7 +18,7 @@ on:
         required: false
         type: string
       tfm-list:
-        default: '[ "net462", "net6.0", "net7.0" ]'
+        default: '[ "net462", "net6.0", "net7.0", "net8.0" ]'
         required: false
         type: string
 
