--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
     with:
       project-name: OpenTelemetry.Instrumentation.EventCounters
       code-cov-name: Instrumentation.EventCounters
-      tfm-list: '[ "net6.0", "net7.0" ]'
+      tfm-list: '[ "net6.0", "net7.0", "net8.0" ]'
 
   build-test-extensions:
     needs: detect-changes
@@ -240,7 +240,7 @@ jobs:
       fail-fast: false # ensures the entire test matrix is run, even if one permutation fails
       matrix:
         os: [ windows-latest, ubuntu-latest ]
-        version: [ net462, net6.0, net7.0 ]
+        version: [ net462, net6.0, net7.0, net8.0 ]
         exclude:
         - os: ubuntu-latest
           version: net462
