Use TestActivityProcessor from OpenTelemetry.Contrib.Tests.Shared

--- a/test/OpenTelemetry.Extensions.Tests/OpenTelemetry.Extensions.Tests.csproj
+++ b/test/OpenTelemetry.Extensions.Tests/OpenTelemetry.Extensions.Tests.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Extensions\OpenTelemetry.Extensions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="$(RepoRoot)\test\OpenTelemetry.Contrib.Tests.Shared\TestActivityProcessor.cs" Link="Includes\TestActivityProcessor.cs" />
+  </ItemGroup>
+
 </Project>
