--- a/src/OpenTelemetry.ResourceDetectors.ProcessRuntime/OpenTelemetry.ResourceDetectors.ProcessRuntime.csproj
+++ b/src/OpenTelemetry.ResourceDetectors.ProcessRuntime/OpenTelemetry.ResourceDetectors.ProcessRuntime.csproj
@@ -8,6 +8,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryCoreLatestVersion)" />
-    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.0.0" Condition="'$(TargetFramework)' == 'net462'" />
+    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.0.0" Condition="'$(TargetFramework)' == '$(NetFrameworkMinimumSupportedVersion)'" />
   </ItemGroup>
 </Project>
