Stackdriver build fixes.

--- a/test/OpenTelemetry.Exporter.Stackdriver.Tests/OpenTelemetry.Exporter.Stackdriver.Tests.csproj
+++ b/test/OpenTelemetry.Exporter.Stackdriver.Tests/OpenTelemetry.Exporter.Stackdriver.Tests.csproj
@@ -12,5 +12,23 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="$(OpenTelemetryCoreLatestVersion)" />
+
+    <!-- See note below for details. -->
+    <PackageReference Include="System.Net.Http"
+                      Version="$(SystemNetHttp)"
+                      IncludeAssets="none"
+                      GeneratePathProperty="true" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+    <!-- Note: There is an issue with the System.Net.Http reference in
+    OpenTelemetry.Exporter.Stackdriver graph. Google.Api.Gax (and friends)
+    require System.Net.Http v4.2.0.0. .NET Framework 4.6.2 ships v4.0.0.0. To
+    workaround this issue we directly reference the NuGet (which is v4.1.1.3)
+    with SpecificVersion=true. -->
+    <Reference Include="System.Net.Http">
+      <HintPath>$(PkgSystem_Net_Http)\lib\net46\System.Net.Http.dll</HintPath>
+      <SpecificVersion>True</SpecificVersion>
+    </Reference>
   </ItemGroup>
 </Project>
